Cambios mejoras para el deploy

--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <!-- ✅ SEO -->
+    <title>Ecotur Guajira Travels</title>
+    <meta name="description" content="Descubre nuestros tours y vive experiencias inolvidables en La Guajira. Turismo ecológico, cultural y de aventura con Ecotur Guajira Travels.">
+    <meta name="keywords" content="La Guajira, tours, viajes, turismo, ecoturismo, Colombia, Cabo de la Vela, Punta Gallinas, Ecotur Guajira Travels, Viajes por la guajira, La Guajira">
+    <meta name="author" content="Ecotur Guajira Travels">
+
+    <!-- ✅ Open Graph (Facebook, WhatsApp, LinkedIn, etc.) -->
+    <meta property="og:title" content="Ecotur Guajira Travels - Turismo en La Guajira">
+    <meta property="og:description" content="Descubre nuestros tours y vive experiencias inolvidables en La Guajira. Turismo ecológico, cultural y de aventura con Ecotur Guajira Travels.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ecoturguajiratravels.com">
+    <meta property="og:image" content="https://ecoturguajiratravels.com/android-chrome-512x512.png">
+    <meta property="og:site_name" content="Ecotur Guajira Travels">
+
+    <!-- ✅ Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Ecotur Guajira Travels - Turismo en La Guajira">
+    <meta name="twitter:description" content="Descubre nuestros tours y vive experiencias inolvidables en La Guajira. Turismo ecológico, cultural y de aventura con Ecotur Guajira Travels.">
+    <meta name="twitter:image" content="https://ecoturguajiratravels.com/android-chrome-512x512.png">
+
+    <!-- ✅ Favicon + App Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="shortcut icon" href="/favicon.ico">
+
+    <!-- 🔹 Extra recomendado -->
+    <meta name="theme-color" content="#ADD90D"> <!-- Cambia el color según tu branding -->
+    <link rel="canonical" href="https://ecoturguajiratravels.com" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
